# wasm-ball-game

./: CMakeLists.txt  README.md
public/: OpenGL_WASM_Project.data  OpenGL_WASM_Project.js  compile.sh  index.html
public/assets/glsl/: fragshader.glsl  vertexshader.glsl
public/assets/models/platform/: platform.mtl
public/assets/models/roll/: roll.mtl
public/include/: assimp.sh
public/src/: main.cpp
public/src/assimp/: mesh.cpp  model.cpp
public/src/cpp/: externalInteractions.cpp  helper.cpp  shader.cpp
public/src/ecs/: components.h  ecs.h  systems.h
public/src/header/: assimp.h  camera.h  externalInteractions.h  helper.h  shader.h
